Remove unscaled-font-dpi setting from X11 backend

https://bugzilla.gnome.org/show_bug.cgi?id=788049